fix : tooltip overlap issue

--- a/inc/customizer/custom-controls/assets/css/unminified/color.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/color.css
@@ -296,7 +296,7 @@
 }
 .astra-color-picker-wrap {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
 	top: 30px;
     left: 0;
     right: 0;
