--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -1103,7 +1103,7 @@
 }
 .astra-color-picker-wrap {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
 	top: 30px;
     right: 0;
     left: 0;
@@ -2502,7 +2502,7 @@
 }
 .astra-color-picker-wrap {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
 	top: 30px;
     right: 0;
     left: 0;
@@ -5704,7 +5704,7 @@ span.customize-control-title.ast-group-section-title {
 }
 
 .customize-control-ast-list-icons .ahfb-sorter-item-panel-header .dashicons-admin-page {
-    margin-right: 0;
+    margin-left: 0;
 }
 .customize-control-ast-text-input textarea {
     display: block;
@@ -6156,6 +6156,7 @@ input[type="text"], input[type="password"], input[type="color"], input[type="dat
   top: 50%;
   left: 40px;
   transform: translateY(-50%);
+  z-index: 1;
 }
 
 .customize-control.customize-control-ast-toggle-control.ast-top-dotted-divider .ast-control-tooltip {
@@ -8744,7 +8745,9 @@ span.customize-control-title.ast-group-section-title {
 .ast-sortable-item.show:hover {
   opacity: 1;
 }
-
+.ast-sortable-item .dashicons-arrow-down-alt2, .ast-sortable-item .dashicons-admin-page, .ast-sortable-item .dashicons-remove {
+    margin-left: -6px;
+}
 .ast-sortable-item .dashicons-admin-page, .ast-sortable-item .dashicons-arrow-down-alt2, .ast-sortable-item .dashicons-remove {
     cursor: pointer;
 }
@@ -8924,7 +8927,7 @@ span.customize-control-title.ast-group-section-title {
 }
 
 .customize-control-ast-list-icons .ahfb-sorter-item-panel-header .dashicons-admin-page {
-    margin-right: 0;
+    margin-left: 0;
 }
 .customize-control-ast-text-input textarea {
     display: block;
